[package]
name = "lzo1x"
version = "0.2.2"
authors = ["Justin de Ruiter <justinderuiter@ziggo.nl>"]
edition = "2024"
rust-version = "1.85.0"
description = "Safe Rust port of the LZO1X compression algorithm"
repository = "https://github.com/jussyDr/lzo1x"
license = "GPL-2.0"
keywords = ["lzo"]
categories = ["compression"]
exclude = ["/tests/corpora", "/benches/files"]

[[test]]
name = "test"
harness = false

[features]
default = ["std"]
std = []

[dependencies]
cfg-if = "1.0.1"

[dev-dependencies]
lzo-sys = "1.0.0"
zip = "4.3.0"
